--- a/app/assets/stylesheets/procedimientos_jstree.css
+++ b/app/assets/stylesheets/procedimientos_jstree.css
@@ -25,7 +25,7 @@ body {
 
 #main {
 	overflow: auto;
-	max-height: 400px;
+	height: 450px;
 }
 
 .search {
@@ -39,4 +39,36 @@ body {
 
 .search input, .search button {
 	margin: 10px 0 ;
+}
+
+#tarea-modal-wrapper .tab-pane {
+	min-height: 300px;
+}
+
+#tarea-modal-wrapper {
+	width: 700px;
+	max-height: 550px;
+	margin-left: -349px;	
+}
+
+.adjuntos_datos .select2-container-multi.select2-container-active .select2-choices, .adjuntos_datos .select2-container-multi .select2-choices {
+  max-height: 60px;
+  overflow-y: auto;
+}
+
+.adjuntos-cont {
+	height: 150px;
+	overflow: auto;
+}
+
+.tabli, .pager li {
+	display: none;
+}
+
+.logic-values {
+	display: none;
+}
+
+.destiny {
+	display: none;
 }
