--- a/app/views/procedimientos/show.html.erb
+++ b/app/views/procedimientos/show.html.erb
@@ -4,106 +4,62 @@
   </div>
 
   <div class="well">
-    <div class="btn-group">
-      <%= link_to icon_tag('Editar', :class => 'icon-edit icon-white'), edit_procedimiento_path(@procedimiento), :class => 'btn btn-primary' %>
-      <%= link_to icon_tag('Borrar', :class => 'icon-trash icon-white'), @procedimiento, confirm: 'Estás seguro?', method: :delete, class: 'btn btn-primary' %>
-      <%= link_to icon_tag('Ver Todos', :class => 'icon-arrow-left icon-white'), procedimientos_path, class: 'btn btn-primary' %>
-    </div>
+    <table>
+      <tbody>
+        <tr>
+          <th>Formato:</th>
+          <td>Nro. 93 - DISEÑO DE PROCEDIMIENTOS</td>
+        </tr>
+        <tr>
+          <th>Macroproceso:</th>
+          <td><%= @procedimiento.subproceso.present? ? @procedimiento.subproceso.proceso.macroproceso.nombre : @procedimiento.proceso.macroproceso.nombre %></td>
+        </tr>
+        <tr>
+          <th>Proceso:</th>
+          <td><%= @procedimiento.subproceso.present? ? @procedimiento.subproceso.proceso.nombre : @procedimiento.proceso.nombre %></td>
+        </tr>
+        <tr>
+          <th>SubProceso:</th>
+          <td><%= @procedimiento.subproceso.nombre if @procedimiento.subproceso.present? %></td>
+        </tr>
+      </tbody>
+    </table>
   </div>
 
-  <p>
-   <b>Nombre:</b>
-   <%= @procedimiento.nombre %>
- </p>
+  <div class="body">
+    <table class="table table-bordered table-condense">
+      <thead>
+        <tr>
+          <th>Nro.</th>
+          <th>Actividades</th>
+          <th>Tareas</th>
+          <th>Método</th>
+          <th>Cargo Responsable</th>
+        </tr>
+      </thead>
+      <tbody>
+      <% act_ant = "" %>
+      <% @procedimiento.actividades.order('orden').each_with_index do |actividad,i| %>
+        <% actividad.tareas.order('orden').each do |tarea| %>
+          <tr>
+            <% if act_ant != actividad.id %>
+            <td rowspan="<%= actividad.tareas.count %>"><%= i.next %></td>
+            <td rowspan="<%= actividad.tareas.count %>"><%= actividad.nombre %></td>
+            <% act_ant = actividad.id %>
+            <% end %>
+            <td class="lborder"><%= tarea.nombre %></td>
+            <td><%= tarea.metodo %></td>
+            <td><%= tarea.cargo_estructura.descripcion %></td>
+          </tr>
+        <% end %>
+      <% end %>
+      </tbody>
+    </table>
+  </div>
 
- <p>
-   <b>Objetivo:</b>
-   <%= @procedimiento.objetivo %>
- </p>
-
- <p>
-   <b>Definiciones:</b>
-   <%= @procedimiento.definiciones %>
- </p>
-
- <p>
-   <b>Elabora fecha:</b>
-   <%= l( @procedimiento.elabora_fecha ) if @procedimiento.elabora_fecha.present? %>
- </p>
-
- <p>
-   <b>Elabora usuario:</b>
-   <%#= @procedimiento.elabora_usuario %>
-   <%= @procedimiento.elaborador.nombres %>
- </p>
-
- <p>
-   <b>Revisado fecha:</b>
-   <%= l( @procedimiento.revisado_fecha) if @procedimiento.revisado_fecha.present? %>
- </p>
-
- <p>
-   <b>Revisado usuario:</b>
-   <%#= @procedimiento.revisado_usuario %>
-   <%= @procedimiento.revisador.nombres if @procedimiento.revisador.present?  %>
- </p>
-
- <p>
-   <b>Aprobado fecha:</b>
-   <%= l( @procedimiento.aprobado_fecha ) if @procedimiento.aprobado_fecha.present? %>
- </p>
-
- <p>
-   <b>Aprobado usuario:</b>
-   <%#= @procedimiento.aprobado_usuario %>
-   <%= @procedimiento.aprobador.nombres if @procedimiento.aprobador.present?  %>
- </p>
-
- <table class="table table-striped table-bordered table-condensed">
-   <thead>
-     <tr>
-       <th>Orden</th>
-       <th>Actividad</th>
-       <th>Acci&oacute;n</th>
-     </tr>
-   </thead>
-   <tbody>
-     <% for actividad in @actividades  %>
-     <tr>
-       <td><%= actividad.orden  %></td>
-       <td><%= actividad.descripcion  %></td>
-       <td>
-        <%#= link_to icon_tag('Agregar Tarea', :class => 'icon-plus-sign'), new_tarea_path(:id => @procedimiento.id), :target => :blank%>
-        <%#= link_to icon_tag('Agregar Tarea', :class => 'icon-plus-sign'), agregar_tarea_path(:id => actividad.id), :remote => true %>
-        <%#= link_to icon_tag('Ver Tareas', :class => 'icon-list-alt'), '#' %>
-        <%= link_to icon_tag('Ver Tareas', :class => 'icon-list-alt'), listar_tareas_path(:actividad_id => actividad.id), :remote => true, :onclick => 'mostrarPopup()' %>
-        <%#= link_to 'Tareas', new_tarea_path, :popup => ['tareas', 'height=320, width=512'] %>
-
-
-      </td>
-    </tr>
-    <% end %>
-  </tbody>
-</table>
 
 </section>
 
-<div class="modal fade" id="add-tarea-modal" style="display: none">
-  <div class="modal-header">
-   <a class="close" data-dismiss="modal">x</a>
-   <h3>Tareas</h3>
- </div>
- <div class="modal-body" id ="modal-body">
-  <%#= render 'campos_tarea' %>
-</div>
-</div>
-
-<script type="text/javascript">
-function mostrarPopup(){
-
-  $('#add-tarea-modal').modal('toggle')
-}
-</script>
-
-<%= stylesheet_link_tag 'smart_wizard' %>
-<%= javascript_include_tag 'jquery.smartWizard-2.0' %>
+<style>
+  table td.lborder { border-left: 1px solid #ddd; }
+</style>
