--- a/app/views/subprocesos/_form.html.erb
+++ b/app/views/subprocesos/_form.html.erb
@@ -11,6 +11,8 @@
     <%= f.input :serieproceso_id, :label => "Proceso", :collection => Proceso.all, :label_method => :codigo_nombre, :prompt => "-- Seleccione --" %>
   <% end %>
 
+   <%= f.input :cargo_estructura_id, :label => "Cargo Responsable", :collection => CargoEstructura.all, :label_method => :descripcion, :prompt => "-- Seleccione --" %>
+
   <% unless @from_tree %>
     <div class="form-actions">
       <%= f.button :submit, 'Guardar', :class => 'btn btn-success' %>
