--- a/app/views/tareas/edit.js.erb
+++ b/app/views/tareas/edit.js.erb
@@ -1,3 +1,4 @@
-$('#modal-body').html("<%= escape_javascript( render( :partial => 'actividades/campos_tarea', :locals => { :tarea => @tarea })) %>")
-$('#add-tarea-modal').css('width' , '500px')
-$('#add-tarea-modal').css('height' , '100%')
+$('#tarea-modal-wrapper .modal-header h3').html('Editar Tarea');
+$('#tarea-modal-wrapper .modal-body').html("<%= escape_javascript( render( :partial => 'form', :locals => { :tarea => @tarea })) %>");
+//$('#tarea-modal-wrapper .modal-footer').show();
+$('#tarea-modal-wrapper').modal();
